<resources>
    <!-- App Name -->
    <string name="app_name">Book Inventory</string>
    <!-- Title for the activity to add a new book -->
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>

<!-- Spinner Labels -->
    <!-- Label for dropdown menu option for a an Amazon Supplier unknown-->
    <string name="supplier_amazon">Amazon</string>
    <!-- Label for dropdown menu option for a Barnes and Noble Supplier male-->
    <string name="supplier_barnes_and_nobles">Barnes and Nobles</string>
    <!-- Label for dropdown menu option for a BAM Supplier female-->
    <string name="supplier_bam">Books-A-Million</string>
<!-- Spinner Labels -->

<!-- Overflow Menu Options for menu_catalog -->
    <!-- Label for overflow menu option that inserts fake book data into the app -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <!-- Label for overflow menu option that deletes all the book's data in the app -->
    <string name="action_delete_all_entries">Delete All Books</string>
<!-- Overflow Menu Options for menu_catalog -->

<!-- Overflow Menu Options for menu_editor -->
    <!-- Label for editor menu option to save book and leave the menu editor -->
    <string name="action_save">Save</string>
    <!-- Label for editor overflow menu option that deletes the current book -->
    <string name="action_delete">Delete</string>
<!-- Overflow Menu Options for menu_editor -->

<!-- Editor Hints -->
    <!-- Text hint for title field in the editor -->
    <string name="hint_book_title">Title</string>
    <!-- Text hint for author field in the editor -->
    <string name="hint_book_author">Author</string>
    <!-- Text hint for Price field in the editor -->
    <string name="hint_book_price">Price</string>
    <!-- Text hint for Quantity field in the editor -->
    <string name="hint_book_quantity">Quantity</string>
    <!-- Text hint for phone number field in the editor  -->
    <string name="hint_phone_number">Phone Number</string>
<!-- Editor Hints -->

<!-- Labels for Editor -->
    <string name="label_book_info">Overview</string>
    <string name="label_supplier">Supplier</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_supplier_phone_number">Supplier Phone Number</string>
    <string name="editor_insert_book_failed">Error while saving Book</string>
    <string name="editor_insert_book_successful">Book Saved</string>
<!-- Labels for Editor -->

    <!-- Label for TextView in list_item if author is unknown -->
    <string name="unknown_author">Unknown</string>

<!-- Text For EmptyView -->
    <!-- Title text for the empty view, which describes the empty shelf image -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <!-- Subtitle text for the empty view that prompts the user to add a book -->
    <string name="empty_view_subtitle_text">Get started by adding a book!</string>
<!-- Text For EmptyView -->

    <!-- Toast message in editor when current book has failed to be updated -->
    <string name="editor_update_book_failed">Error with updating book</string>
    <!-- Toast message in editor when current book was successfully updated -->
    <string name="editor_update_book_successful">Book updated</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current book -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Dialog message to ask the user to confirm deleting the current book -->
    <string name="delete_dialog_msg">Delete this book?</string>
    <!-- Dialog button text for the option to confirm deleting the current book -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current book -->
    <string name="cancel">Cancel</string>
    <!-- Toast message in editor when current book has failed to be deleted -->
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <!-- Toast message in editor when current book was successfully deleted -->
    <string name="editor_delete_book_successful">Book deleted</string>

<!-- Quantity Buttons -->
    <string name="add_button">+</string>
    <string name="subtract_button">-</string>
<!-- Quantity Buttons -->

<!-- Required Fields Toast Message -->
    <string name="requires_title">Book requires a title!</string>
    <string name="requires_author">Book requires an author!</string>
    <string name="requires_price">Book requires a price!</string>
    <string name="requires_quantity">Books requires a quantity!</string>
    <string name="requires_phone_number">Books requires a supplier\'s phone number!</string>
<!-- Required Fields Toast Message -->

    <string name="call_supplier">Call Supplier</string>

</resources>